# dist-challenge

./: Cargo.toml  LICENSE  input.txt
src/: lib.rs  main.rs
